--- a/sass/parciales/_principal.scss
+++ b/sass/parciales/_principal.scss
@@ -31,9 +31,11 @@
         &--img {
 
             border-radius: $borde+30;
-            padding-right: 10px;
+            margin-right: 30px;
             height: 220px;
-            padding-bottom: 10px;
+            margin-bottom: 50px;
+            box-shadow: 1px 2px 10px 1px rgba(242, 161, 161, 0.89);
+            
         }
     }
 
