se mod clases y se agrego video

--- a/sass/parciales/_principal.scss
+++ b/sass/parciales/_principal.scss
@@ -56,6 +56,11 @@
             width: 100%;
         }
 
+        @include movil {
+           
+            margin-right: 30px;
+            height: 400px;
+        }
        
 
         &--titulo {
