--- a/sass/main.css
+++ b/sass/main.css
@@ -103,6 +103,13 @@ header {
      object-fit: cover;
 }
 
+.carousel-item__video {
+  width: 90%;
+  height: 30rem;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
 /*------------FOOTER------------------*/
 footer {
   background: -webkit-gradient(linear, left top, left bottom, from(rgba(188, 169, 140, 0.503)), color-stop(rgba(149, 247, 214, 0.475)), to(rgba(32, 147, 193, 0.338))), url(../media/fondo.jpg);
@@ -110,7 +117,7 @@ footer {
   background-position: center;
   background-size: cover;
   padding-top: 5px;
-  height: 40vh;
+  height: 36vh;
 }
 
 @media screen and (max-width: 768px) {
@@ -133,7 +140,7 @@ footer {
   }
 }
 
-.grillaFoot {
+.grillaFooter {
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: 0.7fr 1.3fr 1fr;
@@ -141,10 +148,11 @@ footer {
   -ms-grid-rows: 1fr;
       grid-template-rows: 1fr;
       grid-template-areas: "direc iconos sec";
+  margin-left: 20px;
 }
 
 @media screen and (max-width: 768px) {
-  .grillaFoot {
+  .grillaFooter {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -157,7 +165,7 @@ footer {
   }
 }
 
-.grillaFoot__direc {
+.grillaFooter__direc {
   -ms-grid-row: 1;
   -ms-grid-column: 1;
   grid-area: direc;
@@ -173,19 +181,19 @@ footer {
           justify-content: center;
 }
 
-.grillaFoot__direc i {
-  font-size: 1.3rem;
+.grillaFooter__direc i {
+  font-size: 1.4rem;
   text-align: center;
   color: #182163;
 }
 
 @media screen and (max-width: 768px) {
-  .grillaFoot__direc i {
+  .grillaFooter__direc i {
     font-size: 2rem;
   }
 }
 
-.grillaFoot__direc i p {
+.grillaFooter__direc i p {
   color: #e11515;
   font-family: 'Play', sans-serif;
   font-weight: bold;
@@ -193,37 +201,157 @@ footer {
 }
 
 @media screen and (max-width: 768px) {
-  .grillaFoot__direc i p {
+  .grillaFooter__direc i p {
     font-size: 1.5rem;
   }
 }
 
-.grillaFoot__iconos {
+.grillaFooter__iconos {
   -ms-grid-row: 1;
   -ms-grid-column: 2;
   grid-area: iconos;
+  margin-left: 80px;
 }
 
-.grillaFoot__iconos img {
-  height: 7rem;
-  padding-left: 200px;
+@media screen and (max-width: 480px) {
+  .grillaFooter__iconos {
+    margin: 0;
+  }
+}
+
+.grillaFooter__iconos img {
+  height: 6rem;
+  padding-left: 180px;
 }
 
 @media screen and (max-width: 768px) {
-  .grillaFoot__iconos img {
+  .grillaFooter__iconos img {
     height: 8rem;
+    padding-left: 100px;
   }
 }
 
 @media screen and (max-width: 480px) {
-  .grillaFoot__iconos img {
+  .grillaFooter__iconos img {
     height: 6rem;
     padding: 0 0 0 50px;
     margin: 20px 0;
   }
 }
 
-.grillaFoot__sec {
+.grillaFooter__iconos .socialMedia {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+}
+
+@media screen and (max-width: 768px) {
+  .grillaFooter__iconos .socialMedia {
+    margin-right: 100px;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .grillaFooter__iconos .socialMedia {
+    margin-right: 50px;
+  }
+}
+
+.grillaFooter__iconos .socialMedia__socialIcono {
+  margin-left: 20px;
+  margin-bottom: 10px;
+  width: 50px;
+  height: 50px;
+  border: 2px solid #e11515;
+  border-radius: 30px;
+  color: #f25e5e;
+  -webkit-animation: scale-in-center 3.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) 2.5s 1 both;
+          animation: scale-in-center 3.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) 2.5s 1 both;
+}
+
+@media screen and (max-width: 768px) {
+  .grillaFooter__iconos .socialMedia__socialIcono {
+    width: 80px;
+    height: 80px;
+    border-radius: 40px;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .grillaFooter__iconos .socialMedia__socialIcono {
+    width: 70px;
+    height: 70px;
+    border-radius: 40px;
+  }
+}
+
+.grillaFooter__iconos .socialMedia__socialIcono:hover {
+  background: #c97c7c;
+  color: #0606a5;
+}
+
+.grillaFooter__iconos .socialMedia__socialIcono i {
+  font-size: 2rem;
+  line-height: 50px;
+  padding-left: 8px;
+}
+
+@media screen and (max-width: 768px) {
+  .grillaFooter__iconos .socialMedia__socialIcono i {
+    font-size: 3.5rem;
+    line-height: 80px;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .grillaFooter__iconos .socialMedia__socialIcono i {
+    font-size: 2.6rem;
+    line-height: 65px;
+    padding-left: 12px;
+  }
+}
+
+.grillaFooter__iconos .text {
+  text-align: center;
+}
+
+@media screen and (max-width: 480px) {
+  .grillaFooter__iconos .text {
+    font-size: 1.5rem;
+  }
+}
+
+.grillaFooter__iconos .line {
+  width: 100%;
+  max-width: 800px;
+  margin-left: 20px;
+  height: 1px;
+  background: tomato;
+  -webkit-box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.5);
+          box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.5);
+}
+
+@media screen and (max-width: 768px) {
+  .grillaFooter__iconos .line {
+    width: 100%;
+    max-width: 500px;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .grillaFooter__iconos .line {
+    width: 100%;
+    max-width: 350px;
+  }
+}
+
+.grillaFooter__secciones {
   -ms-grid-row: 1;
   -ms-grid-column: 3;
   grid-area: sec;
@@ -237,14 +365,14 @@ footer {
   padding-top: 20px;
 }
 
-.grillaFoot__sec i {
-  font-size: 1.3rem;
-  margin-top: 20px;
+.grillaFooter__secciones i {
+  font-size: 1.4rem;
+  margin-top: 15px;
   margin-left: 120px;
   color: #182163;
 }
 
-.grillaFoot__sec a {
+.grillaFooter__secciones a {
   color: #e11515;
   font-weight: bold;
   margin-left: 10px;
@@ -252,107 +380,14 @@ footer {
   font-family: 'Play', sans-serif;
 }
 
-.grillaFoot__sec a:hover {
+.grillaFooter__secciones a:hover {
   color: #182163;
+  font-size: 1.1rem;
 }
 
 @media screen and (max-width: 768px) {
-  .grillaFoot__sec {
+  .grillaFooter__secciones {
     display: none;
-  }
-}
-
-.socialMedia {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: flex-end;
-}
-
-.socialMedia__socialIcono {
-  margin-left: 20px;
-  margin-bottom: 10px;
-  width: 60px;
-  height: 60px;
-  border: 2px solid #e11515;
-  border-radius: 30px;
-  color: #f25e5e;
-  -webkit-animation: scale-in-center 3.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) 2.5s 1 both;
-          animation: scale-in-center 3.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) 2.5s 1 both;
-}
-
-@media screen and (max-width: 768px) {
-  .socialMedia__socialIcono {
-    width: 80px;
-    height: 80px;
-    border-radius: 40px;
-  }
-}
-
-@media screen and (max-width: 480px) {
-  .socialMedia__socialIcono {
-    width: 70px;
-    height: 70px;
-    border-radius: 40px;
-  }
-}
-
-.socialMedia__socialIcono:hover {
-  background: #c97c7c;
-  color: #0606a5;
-}
-
-.socialMedia__socialIcono i {
-  font-size: 2.5rem;
-  line-height: 55px;
-  padding-left: 8px;
-}
-
-@media screen and (max-width: 768px) {
-  .socialMedia__socialIcono i {
-    font-size: 3.5rem;
-    line-height: 80px;
-    padding-left: 8px;
-  }
-}
-
-@media screen and (max-width: 480px) {
-  .socialMedia__socialIcono i {
-    font-size: 2.6rem;
-    line-height: 65px;
-    padding-left: 12px;
-  }
-}
-
-.text {
-  text-align: center;
-}
-
-@media screen and (max-width: 480px) {
-  .text {
-    font-size: 1.5rem;
-  }
-}
-
-.line {
-  width: 100%;
-  max-width: 600px;
-  margin: auto;
-  height: 1px;
-  background: tomato;
-  -webkit-box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.5);
-          box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.5);
-}
-
-@media screen and (max-width: 768px) {
-  .line {
-    width: 100%;
-    max-width: 500px;
   }
 }
 
@@ -435,6 +470,13 @@ footer {
     padding-top: 100px;
     height: 350px;
     width: 100%;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .grilla__banner {
+    margin-right: 30px;
+    height: 400px;
   }
 }
 
