--- a/sass/parciales/_footerYheader.scss
+++ b/sass/parciales/_footerYheader.scss
@@ -105,13 +105,16 @@ header {
         object-fit: cover;
     }
 
+    &__video{
+        width: 90%;
+        height: 30rem;
+        object-fit: cover;
+
+      
+    }
+
 
 }
-
-
-
-
-
 
 
 /*------------FOOTER------------------*/
@@ -123,7 +126,7 @@ footer {
     background-position: center;
     background-size: cover;
     padding-top: 5px;
-    height: 40vh;
+    height: 36vh;
 
 
     @include tablet {
@@ -141,30 +144,21 @@ footer {
         overflow-y: hidden;
         border-top: tomato 2px solid;
     }
-
-
 }
 
-
-
-
-
-
-
-
-.grillaFoot {
+.grillaFooter {
     display: grid;
     grid-template-columns: 0.7fr 1.3fr 1fr;
     grid-template-rows: 1fr;
-    grid-template-areas:
-        "direc iconos sec";
+    grid-template-areas:"direc iconos sec";
+    margin-left: 20px;
+
 
     @include tablet {
         display: flex;
         flex-direction: column;
         flex-wrap: nowrap;
     }
-
    
 
     &__direc {
@@ -173,17 +167,14 @@ footer {
         flex-direction: column;
         justify-content: center;
 
-
         i {
-
-            font-size: 1.3rem;
+            font-size: 1.4rem;
             text-align: center;
             color: $fuenteAzul;
 
             @include tablet{
                 font-size: 2rem;
             }
-
             p {
                 color: rgb(225, 21, 21);
                 font-family: 'Play', sans-serif;
@@ -191,27 +182,28 @@ footer {
                 font-size: 1rem;
                 @include tablet{
                     font-size: 1.5rem;
-                }
-            }
-
-           
+                }            
+            }           
         }
     }
 
-
-
     &__iconos {
         grid-area: iconos;
+        margin-left: 80px;
 
-      
-       
+        @include movil{
+                
+            
+            margin: 0 ;
+        }
 
         img {
-            height: 7rem;
-            padding-left: 200px;
+            height: 6rem;
+            padding-left: 180px;
 
             @include tablet{
                 height: 8rem;
+                padding-left: 100px;
             }
 
             @include movil{
@@ -224,28 +216,107 @@ footer {
         }
 
 
+        .socialMedia {
+            display: flex;
+            justify-content: center;
+            align-items: flex-end;
 
+            @include tablet{
+                margin-right: 100px;
+            }
+
+            @include movil{
+                margin-right: 50px;
+            }
+        
+
+            &__socialIcono {
+                margin-left: 20px;
+                margin-bottom: 10px;
+                width: 50px;
+                height: 50px;
+                border: 2px solid rgb(225, 21, 21);
+                border-radius: $borde+10;
+                color: rgb(242, 94, 94);
+                animation: scale-in-center 3.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) 2.5s 1 both;
+        
+                @include tablet{
+                    width: 80px;
+                height: 80px;
+                border-radius: $borde+20;
+                }
+        
+                @include movil{
+                    width: 70px;
+                height: 70px;
+                border-radius: $borde+20;
+                }
+        
+                &:hover {
+                    background: rgb(201, 124, 124);
+                    color: rgb(6, 6, 165);        
+                }
+        
+                i {
+                    font-size: 2rem;
+                    line-height: 50px;
+                    padding-left: 8px;
+
+                    @include tablet {
+                        font-size: 3.5rem;
+                        line-height: 80px;
+                    }                    
+                    @include movil {
+                        font-size: 2.6rem;
+                        line-height: 65px;
+                        padding-left: 12px;
+                    }
+                }        
+            }                       
+        }
+                
+        .text {
+            text-align: center;
+            @include movil {
+                font-size: 1.5rem;;
+            }        
+        }
+
+        .line {
+            width: 100%;
+            max-width: 800px;
+            margin-left: 20px;
+            height: 1px;
+            background: tomato;
+            box-shadow: $sombreado;
+        
+            @include tablet {
+                width: 100%;
+                max-width: 500px;
+            }
+
+            @include movil {
+                width: 100%;
+                max-width: 350px;
+            }
+        }
 
     }
 
-    &__sec {
-
+    &__secciones {
         grid-area: sec;
         display: flex;
         flex-direction: column;
         padding-top: 20px;
 
-
         i {
-            font-size: 1.3rem;
-            margin-top: 20px;
+            font-size: 1.4rem;
+            margin-top: 15px;
             margin-left: 120px;
             color: $fuenteAzul;
-
         }
 
         a {
-
             color: rgb(225, 21, 21);
             font-weight: bold;
             margin-left: 10px;
@@ -254,107 +325,11 @@ footer {
 
             &:hover {
                 color: $fuenteAzul;
+                font-size: 1.1rem;
             }
-
         }
-
         @include tablet {
             display: none;
         }
-
-
-    }
-
-
-
-
-}
-
-
-
-
-
-
-
-
-
-
-
-.socialMedia {
-    display: flex;
-    justify-content: center;
-    align-items: flex-end;
-
-    &__socialIcono {
-        margin-left: 20px;
-        margin-bottom: 10px;
-        width: 60px;
-        height: 60px;
-        border: 2px solid rgb(225, 21, 21);
-        border-radius: $borde+10;
-        color: rgb(242, 94, 94);
-        animation: scale-in-center 3.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) 2.5s 1 both;
-
-        @include tablet{
-            width: 80px;
-        height: 80px;
-        border-radius: $borde+20;
-        }
-
-        @include movil{
-            width: 70px;
-        height: 70px;
-        border-radius: $borde+20;
-        }
-
-        &:hover {
-            background: rgb(201, 124, 124);
-            color: rgb(6, 6, 165);
-        }
-
-        i {
-            font-size: 2.5rem;
-            line-height: 55px;
-            padding-left: 8px;
-
-            @include tablet {
-                font-size: 3.5rem;
-                line-height: 80px;
-            padding-left: 8px;
-            }
-
-            @include movil {
-                font-size: 2.6rem;
-                line-height: 65px;
-                padding-left: 12px;
-            }
-        }
-
-    }
-
-
-
-}
-
-
-.text {
-    text-align: center;
-    @include movil {
-        font-size: 1.5rem;
-    }
-
-}
-
-.line {
-    width: 100%;
-    max-width: 600px;
-    margin: auto;
-    height: 1px;
-    background: tomato;
-    box-shadow: $sombreado;
-
-    @include tablet {
-        width: 100%;
-        max-width: 500px;
     }
 }
